Added JVM option --enable-native-access=ALL-UNNAMED globally in build.sbt so SQLite’s native-load warning is suppressed on run/test.